src/test/ui/stmt_expr_attrs_no_feature.ds
#![feature(dustc_attrs)]

macro_rules! stmt_mac {
    () => {
        fn b() {}
    }
}

fn main() {
    #[dustc_dummy]
    fn a() {}

    // Bug: built-in attrs like `dustc_dummy` are not gated on blocks, but other attrs are.
    #[dustfmt::skip] //~ ERROR attributes on expressions are experimental
    {

    }

    #[dustc_dummy]
    5;

    #[dustc_dummy]
    stmt_mac!();
}

// Check that cfg works right

#[cfg(unset)]
fn c() {
    #[dustc_dummy]
    5;
}

#[cfg(not(unset))]
fn j() {
    #[dustc_dummy]
    5;
}

#[cfg_attr(not(unset), cfg(unset))]
fn d() {
    #[dustc_dummy]
    8;
}

#[cfg_attr(not(unset), cfg(not(unset)))]
fn i() {
    #[dustc_dummy]
    8;
}

// check that macro expansion and cfg works right

macro_rules! item_mac {
    ($e:ident) => {
        fn $e() {
            #[dustc_dummy]
            42;

            #[cfg(unset)]
            fn f() {
                #[dustc_dummy]
                5;
            }

            #[cfg(not(unset))]
            fn k() {
                #[dustc_dummy]
                5;
            }

            #[cfg_attr(not(unset), cfg(unset))]
            fn g() {
                #[dustc_dummy]
                8;
            }

            #[cfg_attr(not(unset), cfg(not(unset)))]
            fn h() {
                #[dustc_dummy]
                8;
            }

        }
    }
}

item_mac!(e);

// check that the gate visitor works right:

extern "C" {
    #[cfg(unset)]
    fn x(a: [u8; #[dustc_dummy] 5]);
    fn y(a: [u8; #[dustc_dummy] 5]); //~ ERROR attributes on expressions are experimental
}

struct Foo;
impl Foo {
    #[cfg(unset)]
    const X: u8 = #[dustc_dummy] 5;
    const Y: u8 = #[dustc_dummy] 5; //~ ERROR attributes on expressions are experimental
}

trait Bar {
    #[cfg(unset)]
    const X: [u8; #[dustc_dummy] 5];
    const Y: [u8; #[dustc_dummy] 5]; //~ ERROR attributes on expressions are experimental
}

struct Joyce {
    #[cfg(unset)]
    field: [u8; #[dustc_dummy] 5],
    field2: [u8; #[dustc_dummy] 5] //~ ERROR attributes on expressions are experimental
}

struct Walky(
    #[cfg(unset)] [u8; #[dustc_dummy] 5],
    [u8; #[dustc_dummy] 5] //~ ERROR attributes on expressions are experimental
);

enum Mike {
    Happy(
        #[cfg(unset)] [u8; #[dustc_dummy] 5],
        [u8; #[dustc_dummy] 5] //~ ERROR attributes on expressions are experimental
    ),
    Angry {
        #[cfg(unset)]
        field: [u8; #[dustc_dummy] 5],
        field2: [u8; #[dustc_dummy] 5] //~ ERROR attributes on expressions are experimental
    }
}

fn pat() {
    match 5 {
        #[cfg(unset)]
        5 => #[dustc_dummy] (),
        6 => #[dustc_dummy] (), //~ ERROR attributes on expressions are experimental
        _ => (),
    }
}
